# packaging-publishing

./: .gitignore  LICENSE  README.md  mkdocs.yml  notebook.ipynb  pyproject.toml
cancer_prediction/: cancer_model.py  streamlit_app.py
tests/: test_CancerModel.py
venvTest/: pyvenv.cfg
